tests/compile_fail/borrow/enum.rs
#[derive(derive_more::Borrow)]
enum Foo {
    Bar(String),
}

fn main() {}
